--- a/docs/Frontend/Tools/Integrate-husky-prettier-etc.mdx
+++ b/docs/Frontend/Tools/Integrate-husky-prettier-etc.mdx
@@ -1,7 +1,7 @@
 ---
 id: integrate-husky-prettier-etc
-title: integrate husky prettier etc
-sidebar_label: integrate husky prettier etc
+title: 集成 Husky、Prettier 等工具
+sidebar_label: 集成 Husky、Prettier 等工具
 sidebar_position: 10
 description: pnpm create vite-app vue3-ts shell pnpm install husky lint-staged eslint
   prettier -D  json
@@ -15,13 +15,13 @@ last_update:
 sources:
 - pnpm
 ---
-# How to integrate husky prettier etc in Vue project?
+# 如何在 Vue 项目中集成 Husky、Prettier 等工具？
 
-## Create Project with vite
+## 使用 Vite 创建项目
 
 `pnpm create vite-app vue3-ts`
 
-## Install Dependencies
+## 安装依赖
 
 ```shell
 pnpm install husky lint-staged eslint prettier -D
@@ -29,7 +29,7 @@ pnpm install husky lint-staged eslint prettier -D
 
 
 
-## Configure prettier
+## 配置 Prettier
 
 ```json
 // .prettierrc.json
@@ -42,38 +42,38 @@ pnpm install husky lint-staged eslint prettier -D
 }
 ```
 
-you can format code using `pnpx prettier --write .`
+你可以使用 `pnpx prettier --write .` 命令格式化代码
 
-## Configure eslint
+## 配置 ESLint
 
 ```shell
-# inialize eslint 
+# 初始化 ESLint
 pnpm create @eslint/config
 ```
 
-The following optional, you can choose the same with me.
+以下选项是可选的，你可以选择与我相同的配置。
 
 ![image-20231231160250767](https://s2.loli.net/2023/12/31/194DgcJLWNP2V5y.png)
 
-run the command `pnpx eslint .` to check eslint rules;
+运行命令 `pnpx eslint .` 检查 ESLint 规则；
 
-## Install husky and Configure it
+## 安装并配置 Husky
 
 ```shell
-# init husty 
+# 初始化 husky
 pnpm husky install
-# Configure husky 
+# 配置 husky
 pnpx husky add .husky/pre-commit "pnpm lint-staged"
 ```
 
-after run the command above, see your project like this, a underline directory and a pre-commit file auto created.
+执行上述命令后，你的项目结构如下，会自动创建一个 .husky 目录和一个 pre-commit 文件。
 
 ![image-20231231154728294](https://s2.loli.net/2023/12/31/NtE6ZeXCjAdHfGV.png)
 
-Wait a minute, another configuration need to configure.
+稍等，还需要另一个配置。
 
 ```shell
-// pakage.json
+// package.json
   "scripts": {
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "prepare": "husky install",
@@ -86,9 +86,9 @@ Wait a minute, another configuration need to configure.
   },
 ```
 
-## Check the husky 
+## 验证 Husky 
 
-Run the command following to commit some files
+运行以下命令提交一些文件
 
 ```shell
 git add .
@@ -96,17 +96,17 @@ git add .
 git commit -m 'test for husky'
 ```
 
-You will see this in the console:
+你将在控制台看到以下内容：
 
 ![image-20231231160344135](https://s2.loli.net/2023/12/31/f1Ap5UPsdYVjOMG.png)
 
-Congratulations, you succeed to use `git commit` trigger lint-stage.
+恭喜你，你成功地使用 `git commit` 触发了 lint-staged。
 
-This conclude eslint fix code and prettier format code.
+这包括了 ESLint 修复代码和 Prettier 格式化代码。
 
-## To the End 
+## 结语
 
-Thanks for your time, If you get something from my article, please give me clap, meanwhile, feel free to ask question as you need.
+感谢你的时间，如果你从我的文章中学到了一些东西，请给我点赞，同时，如有任何问题，欢迎随时提问。
 
 
 import TailProtocal from "@site/src/components/TailProtocal";
