--- a/docs/Frontend/firebase-database.mdx
+++ b/docs/Frontend/firebase-database.mdx
@@ -1,7 +1,7 @@
 ---
 id: firebase-database
-title: Firebase Database Setup
-sidebar_label: Firebase Database Setup
+title: Firebase 数据库配置
+sidebar_label: Firebase 数据库配置
 sidebar_position: 10
 description: Step-by-step Firebase project setup with Google auth and Firestore
 tags:
@@ -14,50 +14,50 @@ last_update:
 ---
 # Firebase
 
-Here is a step-by-step guide on how to set up your Firebase project, complete with images and descriptions.
+以下是配置 Firebase 项目的分步指南，包含图片和说明。
 
-## 1. Setup the clientId and keys
+## 1. 设置 clientId 和密钥
 
-The first step is to locate your project's configuration details, including your `clientId` and API keys. These are essential for connecting your application to Firebase services. You can find them in your project settings in the Firebase console.
+第一步是找到项目的配置详情，包括 `clientId` 和 API 密钥。这些对于将应用连接到 Firebase 服务至关重要。你可以在 Firebase 控制台的项目设置中找到它们。
 
-In your Firebase project settings, you can find your `Web API Key` and under the "Your apps" section, you'll see the `clientId` for each app you've added.
+在 Firebase 项目设置中，你可以找到 `Web API Key`，在 "Your apps" 部分，你会看到每个已添加应用的 `clientId`。
 
-Follow this link:
+访问此链接：
 
 [console.cloud](https://console.cloud.google.com/auth/clients/896756889850-gpm6eih6o57ljm8ult1gups676a929i4.apps.googleusercontent.com?project=course-tracker-c4806)
 
 ![20251124220038](https://s2.loli.net/2025/11/24/dmEQtzcBe1XPgJ8.png)
 
-## 2. Enable Google login
+## 2. 启用 Google 登录
 
-To allow users to sign in to your application using their Google accounts, you need to enable the Google sign-in provider in the Firebase Authentication settings.
+要允许用户使用其 Google 账户登录你的应用，你需要在 Firebase 身份验证设置中启用 Google 登录提供商。
 
 [console.firebase](https://console.firebase.google.com/project/course-tracker-c4806/authentication/providers)
 
 ![20251124220057](https://s2.loli.net/2025/11/24/ZUXGawYI386drfR.png)
 
-also need Web client ID and WEB client secret, you can get it from first step.
+还需要 Web 客户端 ID 和 Web 客户端密钥，你可以从第一步获取。
 
 ![20251124220112](https://s2.loli.net/2025/11/24/8Wpkf21hy35DqN7.png)
 
 
-## 3. Add domain to login
+## 3. 添加登录域名
 
-For security reasons, Firebase only allows sign-ins from domains that you explicitly authorize. You need to add the domain where your application is hosted to the list of authorized domains.
+出于安全原因，Firebase 仅允许来自你明确授权的域名的登录。你需要将应用托管的域名添加到授权域名列表中。
 
-Still in the "Sign-in method" tab of the Authentication section, scroll down to "Authorized domains" and click "Add domain" to enter your application's domain.
+仍在身份验证部分的 "Sign-in method" 选项卡中，向下滚动到 "Authorized domains"，点击 "Add domain" 输入你的应用域名。
 
 ![20251124220132](https://s2.loli.net/2025/11/24/hiZDmg9El8nuCVI.png)
 
-## 4. Set JDK admin
+## 4. 设置 JDK 管理员
 
-To perform administrative tasks from a privileged environment (like a server), you need to use the Firebase Admin SDK. This requires a service account with the necessary permissions. You can generate a private key for this service account in the project settings.
+要从特权环境（如服务器）执行管理任务，你需要使用 Firebase Admin SDK。这需要具有必要权限的服务账户。你可以在项目设置中为该服务账户生成私钥。
 
-Go back to "Project settings," select the "Service accounts" tab, and then click "Generate new private key." This will download a JSON file containing your service account credentials, which you can use to initialize the Admin SDK in your server-side code (e.g., Java, Node.js, Python).
+返回 "Project settings"，选择 "Service accounts" 选项卡，然后点击 "Generate new private key"。这将下载一个包含服务账户凭证的 JSON 文件，你可以用它来在服务器端代码（如 Java、Node.js、Python）中初始化 Admin SDK。
 
 ![20251124220149](https://s2.loli.net/2025/11/24/T6j7aRQubJGNM38.png)
 
-1. Config the Rule
+1. 配置规则
 
 ![20251124220202](https://s2.loli.net/2025/11/24/EQ6upqTbIPjCetw.png)
 
