--- a/i18n/zh-Hans/code.json
+++ b/i18n/zh-Hans/code.json
@@ -571,5 +571,83 @@
   "theme.tags.tagsPageTitle": {
     "message": "标签",
     "description": "The title of the tag list page"
+  },
+  "tailProtocol.title": {
+    "message": "协议"
+  },
+  "tailProtocol.code.start": {
+    "message": "本作品代码部分采用"
+  },
+  "tailProtocol.code.license": {
+    "message": "Apache 2.0协议"
+  },
+  "tailProtocol.code.end": {
+    "message": "进行许可。遵循许可的前提下，你可以自由地对代码进行修改，再发布，可以将代码用作商业用途。但要求你："
+  },
+  "tailProtocol.condition.attribution": {
+    "message": "署名"
+  },
+  "tailProtocol.condition.attribution.desc": {
+    "message": "：在原有代码和衍生代码中，保留原作者署名及代码来源信息。"
+  },
+  "tailProtocol.condition.license": {
+    "message": "保留许可证"
+  },
+  "tailProtocol.condition.license.desc": {
+    "message": "：在原有代码和衍生代码中，保留Apache 2.0协议文件。"
+  },
+  "tailProtocol.docs.start": {
+    "message": "本作品文档部分采用"
+  },
+  "tailProtocol.docs.license": {
+    "message": "知识共享署名 4.0 国际许可协议"
+  },
+  "tailProtocol.docs.end": {
+    "message": "进行许可。遵循许可的前提下，你可以自由地共享，包括在任何媒介上以任何形式复制、发行本作品，亦可以自由地演绎、修改、转换或以本作品为基础进行二次创作。但要求你："
+  },
+  "tailProtocol.docs.condition.attribution.desc": {
+    "message": "：应在使用本文档的全部或部分内容时候，注明原作者及来源信息。"
+  },
+  "tailProtocol.docs.condition.noncommercial": {
+    "message": "非商业性使用"
+  },
+  "tailProtocol.docs.condition.noncommercial.desc": {
+    "message": "：不得用于商业出版或其他任何带有商业性质的行为。如需商业使用，请联系作者。"
+  },
+  "tailProtocol.docs.condition.sharealike": {
+    "message": "相同方式共享的条件"
+  },
+  "tailProtocol.docs.condition.sharealike.desc": {
+    "message": "：在本文档基础上演绎、修改的作品，应当继续以知识共享署名 4.0国际许可协议进行许可。"
+  },
+  "homepage.exploreBlogs": {
+    "message": "浏览博客"
+  },
+  "homepage.aboutMe": {
+    "message": "关于我"
+  },
+  "homepage.featuredBlogs": {
+    "message": "精选博客"
+  },
+  "homepage.popularArticles": {
+    "message": "查看一些最受欢迎的文章！"
+  },
+  "homepage.reactTutorial": {
+    "message": "React 教程"
+  },
+  "homepage.reactTutorialDesc": {
+    "message": "学习 React 基础并构建出色的应用。"
+  },
+  "homepage.dockerGuide": {
+    "message": "Docker 指南"
+  },
+  "homepage.dockerGuideDesc": {
+    "message": "掌握 Docker 容器化技术。"
+  },
+  "homepage.functionalRegisterEngine": {
+    "message": "Java 函数式注册引擎"
+  },
+  "homepage.functionalRegisterEngineDesc": {
+    "message": "探索函数式注册引擎的设计。"
   }
 }
