--- a/i18n/zh-Hans/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh-Hans/docusaurus-theme-classic/navbar.json
@@ -4,19 +4,19 @@
     "description": "The title in the navbar"
   },
   "logo.alt": {
-    "message": "网站 Logo",
+    "message": "My Site Logo",
     "description": "The alt text of navbar logo"
   },
   "item.label.docs": {
-    "message": "文档",
+    "message": "docs",
     "description": "Navbar item with label docs"
   },
   "item.label.blog": {
-    "message": "博客",
+    "message": "blog",
     "description": "Navbar item with label blog"
   },
   "item.label.graph": {
-    "message": "关系图",
+    "message": "graph",
     "description": "Navbar item with label graph"
   },
   "item.label.GitHub": {
